# metallictrends

./: .env.example  .gitignore  APIResearch.md  CHANGELOG.md  README.md  api.py  backup.py  client.py  db.py  db_sync.py  pyproject.toml  render.yaml  run.py
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css  theme.js
frontend/src/components/: CsvControls.jsx  MetalSelector.jsx  PerformanceChart.jsx  PriceChart.jsx  TransactionForm.jsx  TransactionTable.jsx
frontend/src/hooks/: usePriceHistory.js  usePriceOnDate.js  useTransactions.js
frontend/src/lib/: csv.js  portfolio.js
migrations/: 0001_initial_schema.sql  0002_add_backfill_attempts_error_detail.py  0003_add_admin_login_codes_status_and_synced_at.sql
queries/: daily_prices_pivot.sql
src/metallictrends/: db.py
src/metallictrends/api/: app.py
src/metallictrends/ingestion/: backup.py  client.py  run.py
src/metallictrends/notify/: email.py
src/metallictrends/sync/: github.py
tests/: conftest.py  sample_data.py  test_all.py  test_api.py  test_client.py  test_db.py  test_run.py
tests/api/: test_app.py
tests/ingestion/: test_client.py  test_run.py
tests/notify/: test_email.py
tests/sync/: test_github.py
web/: admin.html  index.html
web/assets/: script.js  style.css
web/portfolio/: index.html
web/portfolio/assets/: index-B1yyBZaA.js  index-Ckh9B0F2.css
