[project]
name = "metallictrends"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
web = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "jinja2>=3.1",
]

[tool.setuptools]
py-modules = ["client", "db", "run", "backup", "api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
