[project]
name = "metallictrends"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.28",
    "fastapi>=0.115",
    "jinja2>=3.1",
    "metallictrends[web]",    
]
web = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "jinja2>=3.1",
]

[project.scripts]
metallictrends-backfill = "metallictrends.ingestion.run:main"
metallictrends-backup = "metallictrends.ingestion.backup:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated; install `httpx2` instead\\.:starlette.exceptions.StarletteDeprecationWarning",
]
